log
Fri, May 16, 2025  2:11:12 PM: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
Compilation failed
In file included from test.c:5:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:39: error: unused variable 'digito' [-Werror=unused-variable]
   55 |     int control1, control2, control3, digito;
      |                                       ^~~~~~
test.c: At top level:
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
3f0e54c
Fri, May 16, 2025  2:11:33 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
test.c:7:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    7 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
fb38d7c
Fri, May 16, 2025  2:13:59 PM: 
 tests:  0|5
total_score: 0/70
3ce0332
Fri, May 16, 2025  2:15:26 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
e6c6be3
Fri, May 16, 2025  2:15:45 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
bf87ac7
Fri, May 16, 2025  2:16:33 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
9758f6d
Fri, May 16, 2025  2:17:47 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
3b349a0
Fri, May 16, 2025  2:18:13 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
4a98d7a
Fri, May 16, 2025  2:18:28 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
567a2e6
Fri, May 16, 2025  2:18:48 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
1c570f2
Fri, May 16, 2025  2:19:04 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
b0e83d0
Fri, May 16, 2025  2:20:16 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b3a8391
Fri, May 16, 2025  2:20:31 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
57b8e2f
Fri, May 16, 2025  2:32:00 PM: 
 sudoku.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
f56bf22
Fri, May 16, 2025  2:33:36 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
897ebaa
Fri, May 16, 2025  2:55:25 PM: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|4
total_score: 15/70
b81d2d4
Fri, May 16, 2025  2:59:51 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
6bdbe44
Fri, May 16, 2025  3:08:21 PM: 
 sudoku.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
29d0351
Fri, May 16, 2025  3:35:23 PM: 
 sudoku.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
5120c9a
Fri, May 16, 2025  3:40:49 PM: 
 sudoku.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
85ee620
Fri, May 16, 2025  3:43:24 PM: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  5|3
total_score: 35/70
72e64e0
Fri, May 16, 2025  3:50:37 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
0fc9d83
Fri, May 16, 2025  3:51:04 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
d0b24e4
Fri, May 16, 2025  3:51:32 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
8b487a7
Fri, May 16, 2025  3:51:50 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
c82d3ff
Fri, May 16, 2025  3:52:16 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
47d37f7
Fri, May 16, 2025  3:59:32 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
6eaf092
Fri, May 16, 2025  4:04:40 PM: 
 sudoku.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
df6d8f1
Fri, May 16, 2025  4:05:04 PM: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
31eec6f
Fri, May 16, 2025  4:06:42 PM: 
 sudoku.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  6|2
total_score: 45/70
45058ea
Fri, May 16, 2025  4:29:13 PM: 
 sudoku.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  7|1
total_score: 55/70
b202caa
Fri, May 16, 2025  4:42:15 PM: 
 sudoku.c | 20 ++++++++++++++++++++
 1 file changed, 20 insertions(+)
 tests:  10|0
total_score: 70/70
3a307cc
Fri, May 16, 2025  4:43:31 PM: 
 sudoku.c | 12 ++++++------
 1 file changed, 6 insertions(+), 6 deletions(-)
 tests:  10|0
total_score: 70/70
1601a4d
